--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,12 +2,15 @@ body {
   background-color: #06071b; 
   background-size: cover;
   background-position: center;
-  height: 100vh;
   font-size: 16px;
   color:#acacb5;
   font-family: "Open Sans", sans-serif;
   max-width: 1280px;
   margin: 0 auto;
+}
+
+body, html {
+  overflow-x: hidden;
 }
 
 .titulo_spand2 {
@@ -49,6 +52,7 @@ textarea {
 
 /* #app {
   font-weight: normal;
+  background-color: antiquewhite;
 } */
 
 /* a,
